<resources>
    <string name="app_name">Proyecto</string>
    <string name="action_settings">Settings</string>
    <string name="reto1">reto1</string>
    <string name="reto3">reto3</string>
    <string name="reto2">reto2</string>
    <string name="reto4">reto4</string>
    <string name="en_que_a_o_muri_cristobal_col_n">¿En que año murió Cristobal Colón?</string>
    <string name="aceptar">aceptar</string>
    <string name="informaci_n">Información</string>
    <string name="saca_una_foto_con_la_camara">Saca una foto con la camara</string>
    <string name="foto">foto</string>
    <string name="todo">todo</string>
    <string name="x_2_5x_6_0">x^2-5x+6=0</string>
    <string name="confirmar">confirmar</string>
    <string name="todo2">todo2</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO4</string>
    <string name="todo5">todo5</string>
    <string name="todo6">TODO6</string>
    <string name="todo7">todo7</string>
    <string name="todo1">TODO1</string>
    <string name="terminar">Terminar</string>
    <string name="resultado">RESULTADO</string>
    <string name="volver_a_intentar">Volver a intentar</string>
    <string name="elige_la_opcion_correcta">Elige la opcion correcta</string>
    <string name="saca_una_foto_con_la_camara_que_tenga_como_predominante_el_color_rojo">Saca una foto con la camara que tenga como predominante el color rojo</string>
</resources>
